Consolidate attachment creation logic in the AttachmentService and resolve the circular references in the app initialization